--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- SWIPER CSS -->
     <link rel="stylesheet" href="#">
 
-    <title>Responsive porfolio website Ansel</title>
+    <title>Responsive porfolio website Rolando</title>
 </head>
 <body>
     <!-- HEADER -->
