--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <span class="work__item" data-filter=".bootstrap">Bootstrap</span>
                 <span class="work__item" data-filter=".js">JavaScript</span>
                 <span class="work__item" data-filter=".games">Games JS</span>
-                <span class="work__item" data-filter=".backend_node">Backen NodeJs</span>
+                <span class="work__item" data-filter=".backend__node">Backen NodeJs</span>
             </div>
             <div class="work__container container grid">
                 <div class="work__card mix web">
@@ -628,7 +628,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix backend_node">
+                <div class="work__card mix backend__node">
                     <img src="/assets/img/node_js.png" alt="" class="work__img">
     
                     <h3 class="work__title">Mi primera App en NodeJs</h3>
